change in index1.hmtl

--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,6 @@
 	  So new index1.html
 	  </title>
 	  <body>
-	  	Going to push this master now 
+	  	Going to push this master now , master recieve and send it back to user 
 	  </body>
 </html>
