modifed index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
 		<title> Jai changes done with branch with other work too</title>
+		
 	</head>
+	<body>Modified BY AVI</body>
 </html>
