--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 		<title> Jai changes done with branch with other work too</title>
 		
 	</head>
-	<body>Modified BY AVI and approved by Jai</body>		<footer></footer>
+	<body>Modified BY AVI and approved by Jai</body>		<footer>By Jai</footer>
 </html>
